fix: task manager memory uses default waitForTasks()